# sublinear-bft-scifest

./: COMPETITIVE_ANALYSIS.md  Cargo.toml  FEATURES_ROADMAP.md  FINAL_AUDIT_REPORT.md  IMPACT_METHODOLOGY.md  POSTER_GRAPHICS_DATA.md  POSTER_TEXT_EXPANDED.md  POSTER_TEXT_FINAL.md  POSTER_TEXT_PRINT.md  PROJECT_STATUS.md  README.md  RESOURCE_GUIDE.md  SCIFEST_FEATURES_SUMMARY.md  SCIFEST_READINESS_CHECKLIST.md
benches/: engine_bench.rs  scifest_features_bench.rs
examples/: feature_demo.rs
poster_charts/: README.md
src/: bls_crypto.rs  consensus.rs  crypto.rs  dag.rs  fault_injector.rs  geo_latency.rs  lib.rs  main.rs  main.rs.bak  main_e4.rs  ml_predictor.rs  net.rs  types.rs
